# ius-kabsh

./: CMakeLists.txt  README.md
headers/: NVG_Concept.h  NVG_Consts.h
headers/types/: T_NVG_Basic.h  T_NVG_Coordinate.h  T_NVG_Matrix_2x2.h  T_NVG_Point_2D.h  T_NVG_Scalar.h
sources/: NVG_Concept.c  NVG_Entry_Point.c
sources/types/: T_NVG_Coordinate.c  T_NVG_Matrix_2x2.c  T_NVG_Point_2D.c  T_NVG_Scalar.c
